registered routes, updated swagger, and updated app Initialization and DI
